# AI_Guardian

./: .env  .gitignore  README.md  config.env.example  evaluation.py  evaluation_asr.py  pyproject.toml  requirements.txt  run_app.py
docs/ollama/: ollama_cluster_guide.md  pycharm.sh
src/detecting_attacks/: __init__.py  app.py  llama_guard.py  target_llm.py
